# execute-python-mcp

./: README.md  README.zh.md  pyproject.toml
execute_python_mcp/: __init__.py  __main__.py  server.py
tests/: test_execute_python.py
